# ScheduleBot

./: Dockerfile  __main__.py  docker-compose.yml  pyproject.toml  readme.md
python_homeworks/z1/: begin11.py  begin20.py  integer27.py
python_homeworks/z3/: minmax15.py  minmax5.py  proc13.py  proc34.py
python_homeworks/z4/: array13.py  matrix66.py  matrix98.py
python_honeworks/z1/: integer9.py
python_honeworks/z2/: for26.py  for40.py  if26.py  series11.py  series27.py  while17.py  while25.py
python_honeworks/z4/: array11.py
schedule_bot/: __main__.py  _types.py  bot.py  helpers.py  keyboard.py  keyboards.py  random_data.json  schedule_bot.py  schedule_parser.py  storage.py  utils.py
schedule_bot/blueprints/: __init__.py  attend_apparently.py  current_day_schedule.py  current_lesson.py  default.py  next_lesson.py  schedule.py  today_schedule.py  tomorrow_schedule.py
schedule_bot_src/schedule_bot/: _types.py  keyboards.py  random_data.json  schedule_bot.py  schedule_parser.py  utils.py
